# arbitrage

./: .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  STATUS.html  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml  refresh-events.yml  test.yml
arbitrage/: cli.py  config.py  db.py  logging_setup.py  models.py
arbitrage/book/: l2.py
arbitrage/clients/: polymarket_rest.py  polymarket_ws.py
arbitrage/engine/: executor.py  live_executor.py  loop.py  opportunity.py  paper_fills.py
arbitrage/web/: app.py
arbitrage/web/templates/: index.html
arbitrage/web/templates/fragments/: baskets.html  opportunities.html  pnl.html
docs/: _config.yml  demo.html  index.html  lab.html
docs/api/: negrisk.md  order-signing.md
docs/assets/: demo.js  lab.css  lab.js  style.css
docs/data/: events.json  historical-events.json
tests/: conftest.py  test_cli_and_loop.py  test_l2_book.py  test_opportunity_engine.py  test_paper_fills.py  test_rest_discovery.py  test_risk_gate.py  test_web_dashboard.py  test_ws_dispatch.py
